# project_libs_git

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.c
libs/: CMakeLists.txt
libs/algorithms/: algorithms.c  algorithms.h
libs/array/: array.c  array.h
libs/bitset/: bitset.c  bitset.h
libs/files/: files.c  files.h
libs/lab_20/: lab_20.c  lab_20.h
libs/matrix/: matrix.c  matrix.h
libs/ordered_set/: ordered_set.c  ordered_set.h
libs/string_/: string_.c  string_.h
libs/test/: test_set.c  test_set.h
libs/unordered_set/: unordered_set.c  unordered_set.h
libs/vectors/: vector.c  vector.h
libs/vectors_void/: void_vector.c  void_vector.h
